--- a/lazy-asset.scss
+++ b/lazy-asset.scss
@@ -1,64 +1,65 @@
 .lazy-asset {
-	position: relative;
+    position: relative;
 
-	picture {
-		position: absolute;
-		top: 0; left: 0; width: 100%; height: 100%;
+    picture {
+        position: absolute;
+        top: 0; left: 0; width: 100%; height: 100%;
 
-		img {
-			position: absolute;
-			top: 0; left: 0; width: 100%; height: 100%;
-			object-fit: cover;
-			object-position: 50% 50%;
+        img {
+            position: absolute;
+            top: 0; left: 0; width: 100%; height: 100%;
+            object-fit: cover;
+            object-position: 50% 50%;
 
-			opacity: 0;
+            opacity: 0;
 
-			// IE fallback
-			background-position: center center;
-			background-size: cover;
-		}
-	}
+            // IE fallback
+            background-position: center center;
+            background-size: cover;
+        }
+    }
 
-	video {
-		position: absolute;
-		top: 0; left: 0; width: 100%; height: 100%;
+    video {
+        position: absolute;
+        top: 0; left: 0; width: 100%; height: 100%;
 
-		object-fit: cover;
-		object-position: 50% 50%;
+        object-fit: cover;
+        object-position: 50% 50%;
 
-		opacity: 0;
-	}
+        opacity: 0;
+    }
 
-	.lazy-asset-wrapper {
-		position: relative;
-		width: 100%;
-		height: 100%;
-    overflow: hidden;
-	}
+    .lazy-asset-wrapper {
+        position: relative;
+        width: 100%;
+        height: 100%;
+      overflow: hidden;
+    }
 
-	&.lazy-asset-mode-aspect-ratio { // for aspect ratio wrapper has padding-botom, so we don't want to set height
-		.lazy-asset-wrapper {
-			height: auto;
-		}
-	}
+    &.lazy-asset-mode-aspect-ratio { // for aspect ratio wrapper has padding-botom, so we don't want to set height
+        .lazy-asset-wrapper {
+            height: auto;
+        }
+    }
 
-	// Default background colors
-	&.image {
-		.lazy-asset-wrapper {
-			background-color: #f7f7f7;
-		}
-	}
+    // Default background colors
+    &.lazy-asset-image {
+        .lazy-asset-wrapper {
+            background-color: #f7f7f7;
+        }
+    }
 
-	&.video {
-		.lazy-asset-wrapper {
-			background-color: black;
-		}
-	}
+    &.lazy-asset-video {
+        .lazy-asset-wrapper {
+            background-color: black;
+        }
+    }
 
   // Animations
   &[data-anim=fade] {
     img, video {
       transition: opacity 1s;
+      will-change: opacity;
     }
   }
 
