--- a/lazy-asset.scss
+++ b/lazy-asset.scss
@@ -48,7 +48,9 @@
   }
 
   .lazy-asset-wrapper-overflow { // we want picture / video to be overflow: hidden, but not necessarily entire lazy-asset-wrapper (extra content!). Therefore additional container added, overflow: hidden doesn't seem to work on <video> tag
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     overflow: hidden;
